--- a/package.json
+++ b/package.json
@@ -1,27 +1,44 @@
 {
-  "name": "next-trpc-sequelize",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "next-trpc-sequelize",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"migrate": "tsx ./src/db/migrate.ts"
+	},
+	"dependencies": {
+		"@tanstack/react-query": "^5.62.11",
+		"@tanstack/react-table": "^8.20.6",
+		"@trpc/client": "^10.45.2",
+		"@trpc/react-query": "^10.45.2",
+		"@trpc/server": "^10.45.2",
+		"colors": "^1.4.0",
+		"lodash-es": "^4.17.21",
+		"next": "15.1.3",
+		"pg": "^8.13.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"sequelize": "^6.37.5",
+		"superjson": "^2.2.2",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@next/env": "^15.1.3",
+		"@types/lodash-es": "^4.17.12",
+		"@types/node": "^20",
+		"@types/pg": "^8.11.10",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@types/sequelize": "^4.28.20",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.3",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"tsx": "^4.19.2",
+		"typescript": "^5"
+	}
 }
