--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"migrate": "tsx ./src/db/migrate.ts"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^5.62.11",
+		"@tanstack/react-query": "^4.36.1",
 		"@tanstack/react-table": "^8.20.6",
 		"@trpc/client": "^10.45.2",
 		"@trpc/react-query": "^10.45.2",
@@ -19,6 +19,7 @@
 		"lodash-es": "^4.17.21",
 		"next": "15.1.3",
 		"pg": "^8.13.1",
+		"pg-hstore": "^2.3.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"sequelize": "^6.37.5",
